Got login working again